Cleaned up file

--- a/web/content.xhtml
+++ b/web/content.xhtml
@@ -10,8 +10,7 @@
 		</h:inputText>
 	</h:panelGrid>
 
-	<textarea name="random value" cols="30" rows="10"></textarea>
+	<h:inputTextarea name="task list as text" cols="30" rows="10" value="#{milestones.milestones}" ></h:inputTextarea>
 
 	<h:commandButton value="submit" type="button" />
-
 </ui:composition>
