--- a/web/footer.xhtml
+++ b/web/footer.xhtml
@@ -2,6 +2,6 @@
     xmlns:ui="http://java.sun.com/jsf/facelets"
     xmlns:h="http://java.sun.com/jsf/html"
     xmlns:f="http://java.sun.com/jsf/core">
-    
-    <p>Footer</p>
+
+    <h:outputText value="Copyright &#169; 2014 Sebastian Carroll" />
 </ui:composition>
