--- a/web/edit.xhtml
+++ b/web/edit.xhtml
@@ -1,18 +1,17 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
           "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:ui="http://java.sun.com/jsf/facelets">
+	       xmlns:ui="http://java.sun.com/jsf/facelets">
 <head>
 <title><ui:insert name="title">DontBeLate</ui:insert></title>
 </head>
-
 <body>
 	<!-- <ui:debug hotkey="x" rendered="#{initParam['javax.faces.FACELETS_DEVELOPMENT']}"/> -->
 
 	<div id="header">
 		<ui:insert name="header">
 			<div>
-				<ui:include src="header.xhtml" />
+				<ui:include src="/WEB-INF/edit/edit_header.xhtml" />
 			</div>
 		</ui:insert>
 	</div>
@@ -21,7 +20,7 @@
 	<div id="content">
 		<ui:insert name="content">
 			<div>
-				<ui:include src="content.xhtml" />
+				<ui:include src="/WEB-INF/edit/edit_content.xhtml" />
 			</div>
 		</ui:insert>
 	</div>
@@ -29,11 +28,10 @@
 	<div id="footer">
 		<ui:insert name="footer">
 			<div>
-				<ui:include src="footer.xhtml" />
+				<ui:include src="/WEB-INF/edit/edit_footer.xhtml" />
 			</div>
 		</ui:insert>
 	</div>
 
 </body>
-
 </html>
